--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tiptap/react": "^3.14.0",
     "@tiptap/starter-kit": "^3.14.0",
     "framer-motion": "^12.23.26",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.562.0",
     "midtrans-client": "^1.4.3",
     "next": "16.1.1",
@@ -30,6 +31,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
+    "supabase": "^2.70.5",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
