feat: Add alert/notification system and cart management
- Add Alert component with modal dialogs and confirmations
- Add Notification toast system with animations
- Implement CartContext with optimistic updates
- Add useAlert hook for state management
- Create profile page and admin product detail pages
- Update customer pages with new UI components
- Enhance product and review components

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node server.js",
+    "dev": "node server.js ",
+    "ngrok": "ngrok http --url=electric-hideously-drake.ngrok-free.app 3000",
     "build": "next build",
     "start": "NODE_ENV=production node server.js",
     "lint": "eslint"
